[package]
name = "yz-string-utils"
description = "misc parsing-related string utils"
version = "0.4.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YZITE/string-utils"
categories = ["no-std", "parsing"]

[dependencies]

[dependencies.unicode-ident]
version = "1.0"
optional = true

[dependencies.unicode-normalization]
version = "0.1"
optional = true

[dev-dependencies]
proptest = "1.0"

[features]
consume-ident = ["unicode-ident", "unicode-normalization"]
